--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -1,5 +1,8 @@
 :root {
     --bg-button: #f0f0f0;
+    --bg-button-active: #ccc;
+    --bg-button-operation: #fa8231;
+    --bg-button-operation-active: #fa8231cc;
     --border-button: solid 1px #888;
 }
 
@@ -10,4 +13,25 @@
     border-right: var(--border-button);
     font-size: 1.4em;
     outline: none;
+}
+
+.button:active {
+    background-color: var(--bg-button-active);
+}
+
+.button.double {
+    grid-column: span 2;
+}
+
+.button.triple {
+    grid-column: span 3;
+}
+
+.button.operation {
+    background-color: var(--bg-button-operation);
+    color: #fff
+}
+
+.button.operation:active {
+    background-color: var(--bg-button-operation-active);
 }
